main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
  shared_credentials_file = "./.aws/credentials"
}

resource "aws_security_group" "allow_web" {
  name        = "allow_web_trafic"
  description = "Allow Web Trafic traffic"

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

resource "aws_instance" "web-server-instance" {
  ami               = "ami-0be2609ba883822ec"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1a"
  key_name          = "coba2"
  security_groups = [aws_security_group.allow_web.name]

  tags = {
    Name = "web-server"
  }
}

data "template_file" "inventory" {
    template = "${file("./hosts.tpl")}"

    vars = {
       dev_ip = aws_instance.web-server-instance.private_ip
    }
}

resource "local_file" "save_inventory" {
  content  = "${data.template_file.inventory.rendered}"
  filename = "./hosts"
}
